--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3>Technologist • Engineer • Data Specialist • Endlessly Curious</h3>
 </div>
 <div class='location'>
-<h2>Redding, CA</h2>
+<h2>New York, NY</h2>
 </div>
 </div>
 <div class='header-section contact text-right'>
@@ -51,8 +51,6 @@
 <div class='phone'>
 <h2>
 <a href='tel:501.472.1274'>501.472.1274</a>
-<!-- - jobs[0].shuffle.each_with_index do |book, index| -->
-<!-- %h1= jobs[0].title -->
 </h2>
 </div>
 </div>
@@ -64,7 +62,7 @@
 <a class='button no-print' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </div>
 <div class='about-copy'>
-<p>Throughout my experience as a creative leader, I’ve had the opportunity to work across a diverse range of areas including web development, technology research, and media creation. My passion is to create, bring talented people together, and build and grow MVPs. I seek to understand technology and potential solutions to the fullest so I can effectively synthesize concepts and teach it to others. I value using industry standards and pre-built & open source tools while collaborating with others to learn from their experiences. I believe finding the right combination of people, technology and culture can accelerate any honest vision.</p>
+<p>Throughout my experience as a technology leader, I’ve had the opportunity to work across a diverse range of areas including web development, technology research, and media creation. Leading product teams has allowed me to create, bring talented people together, and managing full lifecycle of digital projects. I seek to understand technology and research solutions to the fullest so I can effectively synthesize concepts and teach it to others. I value using industry standards and pre-built & open source tools while collaborating with others to learn from their experiences. I believe finding the right combination of people, technology and culture can accelerate any honest vision.</p>
 </div>
 </section>
 <section id='work'>
@@ -83,16 +81,18 @@
 <h3 class='job-company'>Bethel Media Group</h3>
 </div>
 <div class='time'>
-<h3 class='job-dates'>2016 - Present</h3>
+<h3 class='job-dates'>Mar 2017 - Present</h3>
 </div>
 </div>
 <div class='pts'>
 <h3>Responsibilities</h3>
 <ul>
-<li>Leading a web development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote Front-End and Ruby Developers</li>
+<li>Leading a web development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote Front-End, Ruby on Rails, & React Developers</li>
 <li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency</li>
-<li>Coordinating with departments and business units on technology needs and solutions</li>
-<li>Building and managing the data pipeline for quality data collection and integrity</li>
+<li>Overseeing ecommerce platform and connected logistics tools for accounting, inventory, fulfillment, and point-of-sale</li>
+<li>Overseeing data policies and CRM implementation and integrations</li>
+<li>Vetting and hiring qualified team members from design to engineering</li>
+<li>Building and managing the data pipeline for quality data collection, reporting, and integrity</li>
 <li>Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives</li>
 <li>Directing and advising DevOps and Engineering decisions to keep our properties running smoothly and efficiently</li>
 </ul>
@@ -100,7 +100,7 @@
 <ul>
 <li><strong>Custom Donations Platform</strong> - <span class="small-text">Led the vision and scope for a custom donations platform which allowed our existing users to very simply donate, set-up recurring donation, and manage donation history and preferences <a href="https://www.bethel.tv/give"  taget="_blank">[&nbsp;bethel.tv/give&nbsp;]</a></span></li>
 <li><strong>Multi-Lingual Podcast Platform</strong> - <span class="small-text">Directed the administration, design, and development of a podcast platform to support 14 languages with industry standard feeds and analytics <a href="https://www.bethel.tv/podcasts" taget="_blank">[&nbsp;bethel.tv/podcasts&nbsp;]</a></span></li>
-<li><strong>Data Repository and Visualization</strong> - <span class="small-text">Built the data pipeline including database structures, ETL set-up, data store management, and vizualizations & dashboards with Tableau products</span></li>
+<li><strong>Data Repository and Visualization</strong> - <span class="small-text">Built a data pipeline including database structures, ETL set-up, data store management, and vizualizations & dashboards with Tableau products</span></li>
 </ul>
 </div>
 </div>
@@ -117,21 +117,21 @@
 <h3 class='job-company'>Pru & Drew Inc.</h3>
 </div>
 <div class='time'>
-<h3 class='job-dates'>2014 - Present</h3>
+<h3 class='job-dates'>Oct 2014 - Present</h3>
 </div>
 </div>
 <div class='pts'>
 <ul>
-<li>Building a media company called The Beauty Project which includes the website, producing photography & video, and planning the brand vision, mission, and campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
+<li>Building a media company called the Beauty Project which includes website planning and development, overseeing, and executing media campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
 <li>Consulting businesses on technology solutions for their online presence, e-commerce, and internal systems to manage their business</li>
-<li>Building websites and managing SEO for businesses including blogging, ecommerce, subscriptions, POS, and digital delivery tools</li>
-<li>Creating media including photography & editing, video directing & editing, logo design & user interface design, and podcast production</li>
+<li>Building websites, researching and managing SEO including blogging, ecommerce, subscriptions, POS, digital delivery tools, structured data, and more</li>
+<li>Manging creative projects, workflows, and teams through media capture, post-production, and publishing</li>
 </ul>
 <h3>Projects</h3>
 <ul>
 <li><strong>Technology Consulting</strong> - <span class="small-text">Helping organizations find ways to increase their potential with their available resources. Consulting has given me the opportunity to advise on building complex solutions with simple tools.</span></li>
-<li><strong>Video Production</strong> - <span class="small-text">Crafting individual and organization's stories through documentary shorts, animated promo videos, and live production through my 12+ years of video experience</span></li>
 <li><strong>Website Development</strong> - <span class="small-text">Developing fully custom websites for new companies and existing companies refreshing their identity <a href="https://www.homeagainpinebluff.org" taget="_blank">[&nbsp;homeagainpinebluff.org&nbsp;]</a></span></li>
+<li><strong>Video Production</strong> - <span class="small-text">Crafting individual and organization's stories through documentary shorts, animated promo videos, and live production throughout my 12+ years of video experience</span></li>
 </ul>
 </div>
 </div>
@@ -148,21 +148,20 @@
 <h3 class='job-company'>New Life Church</h3>
 </div>
 <div class='time'>
-<h3 class='job-dates'>2008 - 2016</h3>
+<h3 class='job-dates'>Apr 2008 - Sep 2016</h3>
 </div>
 </div>
 <div class='pts'>
 <ul>
 <li>Developed web and app based resources to facilitate the operations and membership needs for 12 locations across the state</li>
+<li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching</li>
 <li>Researched and implemented live streaming solutions for events and conferences</li>
 <li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity while overseeing the inital data migration from the legacy tool which involved very detailed accounting data integrity needs</li>
-<li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching</li>
 </ul>
 <h3>Projects</h3>
 <ul>
-<li><strong>NLC App</strong> - <span class="small-text">Designed and engineered an app to deliver video, podcast, event info, event registration, articles, and live streaming for iOS, Android, and AppleTV using an app building tool connected to our site's CMS via JSON APIs [&nbsp;No longer available.&nbsp;]</span></li>
-<li><strong>Internal Database</strong> - <span class="small-text">Migrating years of memebership and donation data from a legacy system, and training staff & volunteers across many geographic locations on usage and reporting</span></li>
-<li><strong>Media RAID</strong> - <span class="small-text">Oversaw the purchase and implementation of a large RAID for media storage and video editing which included planning the network segmentation, physical network wiring & 10GbE hardware, permissions, and organization of the content to facilitate the work of 4 video editors, 3 graphic designers, and many support staff</span></li>
+<li><strong>NLC App</strong> - <span class="small-text">Designed and engineered an app to deliver video, podcast, event info, event registration, articles, and live streaming for iOS, Android, and AppleTV using an app building tool connected via API integrations [&nbsp;No longer available.&nbsp;]</span></li>
+<li><strong>Internal Database</strong> - <span class="small-text">Migrating 5 years of memebership and donation data from a legacy system, validating the data, and training staff & volunteers across  locations on usage, best practices, and reporting</span></li>
 </ul>
 </div>
 </div>
@@ -170,7 +169,7 @@
 </section>
 <section id='experience'>
 <div class='section-title'>
-<h1>Experience</h1>
+<h1>Skills</h1>
 <p>Areas I have invested in learning through work experience, research, and general curiosity</p>
 </div>
 <div class='grid'>
@@ -203,7 +202,7 @@
 <li>This experience allowed me to work with APIs, data modeling, and diverse platforms & integrations.</li>
 <li>I value solving problems and finding the most I can get out of the data and tools available.</li>
 <li>Building out customer management systems and marketing workflows for over a million contacts</li>
-<li>Worked in many engineering development flows and project management methodologies</li>
+<li>Agile development methodology</li>
 </ul>
 </div>
 <div class='experience'>
@@ -217,8 +216,8 @@
 <ul>
 <li>Managing data pipeline with ETL + Google Big Query</li>
 <li>Cleaning & validating data with Trifacta, Tableau Prep, and Tableau Desktop</li>
-<li>Data reporting, analysis, and visualization with Tableau Desktop</li>
-<li>Working on data migration and database structuring projects for large applications</li>
+<li>Data reporting, analysis, and visualization with Tableau Desktop & Google Data Studio</li>
+<li>Working on data migration and architecture for large applications</li>
 <li>Managing a contact database of over 50 million contacts</li>
 </ul>
 </div>
@@ -236,7 +235,7 @@
 <li>Understanding of the hardware, protocols, and mitigations to attacks the internet runs on</li>
 <li>Love for knowing how computers work down to the hardware</li>
 <li>Experience with software/hardware virtualization</li>
-<li>CDNs, conatiners, streaming, analytics, and security</li>
+<li>Jira, Confluence, Slack, GitHub for communication & code management</li>
 </ul>
 </div>
 <div class='experience'>
@@ -248,13 +247,13 @@
 <h2 class='title'>Media</h2>
 </div>
 <ul>
-<li>12+ years of video filming and editing</li>
-<li>Color correction experience with RAW, PRORES, and H.264 video</li>
+<li>12+ years of leading and working in creative environments</li>
 <li>Video workflow in Blackmagic, Davinci Resolve, FCP, and Adobe Suite</li>
+<li>Team and project management from inception through production</li>
+<li>Leading product UI/UX wireframing and design with Sketch and Figma</li>
 <li>Motion Graphics animation with Adobe After Effects and Cinema4D</li>
 <li>Phtography and Lightroom photo editing</li>
-<li>Photoshop, Illustrator, and InDesign for layout & logo design</li>
-<li>Sketch and Figma for UI/UX wireframing & design</li>
+<li>Photoshop, Illustrator, and InDesign</li>
 </ul>
 </div>
 <div class='experience'>
@@ -268,7 +267,7 @@
 <ul>
 <li>10+ years of researching and studying computer & network security</li>
 <li>Information security and data encryption at rest, in transit, and for authentication</li>
-<li>User authentication, database technology, and authentication methods including 2FA, OATH, SQRL, etc.</li>
+<li>End user authentication including password policies, 2FA, OAuth, SQRL, etc.</li>
 <li>Secure hashing and encryption protocols & best practices</li>
 <li>Intrusion prevention, training, detecting, and infrastructure hardening</li>
 <li>Security industry news, standards, and technology</li>
@@ -279,11 +278,42 @@
 <section class='flex no-print' id='contact'>
 <a class='button large' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </section>
-<section class='no-print' id='references'>
+<section id='educations'>
 <div class='section-title'>
+<h1>Education</h1>
+</div>
+<div class='grid'>
+<div class='education'>
+<div class='main flex'>
+<div class='title'>
+<h2 class='edu-title'>Cedarville University</h2>
+<h3 class='edu-company'>Cedarville, OH</h3>
+</div>
+<div class='time'>
+<h3 class='edu-dates'>2004 - 2008</h3>
+</div>
+</div>
+<p>BA | <strong>Electronic Media Technology - Audio</strong></p>
+<p>Minor | <strong>Religious Studies</strong></p>
+</div>
+<div class='education'>
+<div class='main flex'>
+<div class='title'>
+<h2 class='job-title'>Ongoing Education</h2>
+</div>
+</div>
+<ul>
+<li>Tableau training including Tableau Conference 2018</li>
+<li>Podcasts including <strong>Security Now</strong>, <strong>Internet History Podcast</strong>, and <strong>Privacy, Security, & OSINT</strong></li>
+<li>Technology security, standards, and industry information sources</li>
+<li>Local developer meetups and seminars</li>
+</ul>
+</div>
+</div>
+</section>
+<section class='no-print' id='references'>
 <h1>References</h1>
 <p>Available upon request.</p>
-</div>
 </section>
 </div>
 </body>
